Updated Screenshot of Task1

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/article_heading"
+        android:textColor="@color/black"
         android:padding="@dimen/padding_regular"
         android:text="@string/article_subtitle"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
 
     <TextView
         android:id="@+id/article"
