--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,18 +21,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/article_heading"
-        android:textColor="@color/black"
         android:padding="@dimen/padding_regular"
         android:text="@string/article_subtitle"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
+        android:textColor="@color/black" />
 
-    <TextView
-        android:id="@+id/article"
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/article_subheading"
-        android:lineSpacingExtra="@dimen/line_spacing"
-        android:padding="@dimen/padding_regular"
-        android:text="@string/article_text" />
+        android:layout_below="@id/article_subheading">
 
+        <TextView
+            android:id="@+id/article"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:autoLink="web"
+            android:lineSpacingExtra="@dimen/line_spacing"
+            android:padding="@dimen/padding_regular"
+            android:text="@string/article_text" />
+    </ScrollView>
 </RelativeLayout>
