--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/article_subheading"
-                android:layout_width="match_parent"
+                android:layout_width="136dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/article_heading"
                 android:padding="@dimen/padding_regular"
