--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,9 +28,10 @@
 
             <TextView
                 android:id="@+id/article_subheading"
-                android:layout_width="136dp"
+                android:layout_width="93dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/article_heading"
+                android:textStyle="bold"
                 android:padding="@dimen/padding_regular"
                 android:text="@string/article_subtitle"
                 android:textAppearance="@android:style/TextAppearance.DeviceDefault"
